[project]
name = "vortex"
version = "0.1.0"
description = ""
authors = [
    {name = "cage433",email = "cage433@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "google-api-python-client (>=2.187.0,<3.0.0)",
    "google-auth-httplib2 (>=0.3.0,<0.4.0)",
    "google-auth-oauthlib (>=1.2.3,<2.0.0)",
    "pyairtable (>=3.3.0,<4.0.0)",
    "ofxparse (>=0.21,<0.22)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
